crates/oxidoc/tests/snapshots/golden_writer__native__common__ordered-two-parens.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ OrderedList
    ( 1 , Decimal , TwoParens )
    [ [ Plain [ Str "one" ] ] , [ Plain [ Str "two" ] ] ]
]
