crates/oxidoc/tests/snapshots/golden_writer__native__common__quoted-smart.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "She"
    , Space
    , Str "said"
    , Space
    , Quoted DoubleQuote [ Str "hello" ]
    , Space
    , Str "and"
    , Space
    , Quoted SingleQuote [ Str "hi" ]
    , Str "."
    ]
]
