crates/oxidoc/tests/snapshots/golden_writer__native__common__raw-html-inline.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "text"
    , Space
    , RawInline (Format "html") "<cite>"
    , Str "raw"
    , RawInline (Format "html") "</cite>"
    , Space
    , Str "more"
    ]
]
