crates/oxidoc/tests/snapshots/golden_writer__native__common__smart-ellipsis-dashes.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "wait\8230"
    , Space
    , Str "an"
    , Space
    , Str "en\8211dash"
    , Space
    , Str "and"
    , Space
    , Str "an"
    , Space
    , Str "em\8212dash"
    ]
]
